CIS1250_WA1_NayyabGul.html

--- a/CIS1250_WA1_NayyabGul.html
+++ b/CIS1250_WA1_NayyabGul.html
@@ -2,45 +2,22 @@
 <html>
 
 <head>
-  <title>CIS*1250 Template</title>
+  <title>CIS1250_WA1_NayyabGul</title>
   <meta name="google" content="notranslate">
 </head>
 
 <body>
-  <h1>Mauris Tincidunt</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla condimentum tempor ultrices. Suspendisse ac aliquet
-    ante, a condimentum leo. Fusce ac risus quam. Nulla scelerisque enim massa, vel semper urna vehicula ac. Cras in
-    pretium ipsum. Praesent ultrices feugiat accumsan. Suspendisse eget tellus facilisis nisl feugiat molestie nec nec
-    nisl. Suspendisse sagittis, mi quis sagittis placerat, ante urna semper velit, sed sodales quam enim in lorem. Duis
-    ac nisl nec elit mollis tempus ac vel odio. Mauris accumsan, mi et consectetur bibendum, turpis odio mollis dui, eu
-    venenatis turpis nibh eu lacus. Nunc eleifend nunc eu orci tempus lobortis. Donec scelerisque posuere sapien,
-    euismod egestas massa. Nunc id sodales sapien, id rhoncus diam. Mauris pellentesque est dapibus dolor dapibus
-    maximus.</p>
-  <p>Ut dictum velit et sapien ornare accumsan. Vivamus varius, mauris non porta euismod, est lorem scelerisque tortor,
-    id porttitor nisl purus vel odio. Etiam mi metus, imperdiet sit amet purus vitae, volutpat tempus tortor. Maecenas
-    rhoncus malesuada blandit. Etiam tempus ex sit amet lectus dignissim, eget mollis tellus laoreet. Phasellus in
-    auctor mauris. Cras gravida porttitor tortor ac fringilla. Orci varius natoque penatibus et magnis dis parturient
-    montes, nascetur ridiculus mus. Pellentesque consequat convallis mi, eu sodales nunc venenatis non. Aliquam metus
-    dolor, rutrum eget nulla nec, auctor condimentum quam. Phasellus in nulla diam. Suspendisse luctus lobortis
-    pellentesque. Morbi ultrices tellus quis lorem lobortis vestibulum. Proin vitae ipsum purus.</p>
-  <p>Maecenas orci velit, scelerisque ut nisi a, porta sollicitudin sapien. Donec eu ipsum aliquet, malesuada quam sed,
-    posuere elit. Fusce eu eros libero. Aliquam convallis porta nunc maximus placerat. Etiam sit amet sem odio. Sed
-    risus erat, consequat at erat et, ullamcorper rhoncus diam. Integer vehicula mi sed mauris sagittis laoreet. Sed
-    maximus, nibh quis lobortis auctor, metus mi cursus leo, nec laoreet dui tellus at quam. Nullam sagittis dolor nisl,
-    eu viverra ex rutrum sed.</p>
-  <p>Nulla facilisi. Duis at felis et justo mollis accumsan in commodo tellus. Ut pellentesque risus quis felis auctor
-    vulputate. Nullam non leo id metus ornare ultrices eget eget leo. Maecenas feugiat rutrum dictum. Praesent accumsan
-    purus odio, sed fringilla diam faucibus eu. In lacinia orci nec leo blandit porta. Aenean egestas dapibus libero, et
-    condimentum erat. Phasellus fermentum neque libero. Vivamus maximus faucibus nibh ut eleifend. Sed sit amet lorem
-    enim. Sed consectetur enim libero, et maximus lacus pulvinar eu. Praesent in efficitur velit. Morbi tempor et risus
-    vitae vestibulum. Nunc nec tincidunt quam. Phasellus congue nibh non rutrum iaculis.</p>
-  <p>Quisque iaculis efficitur lacus non interdum. Aenean non turpis id magna posuere consectetur. Nam tempus tristique
-    lorem et pulvinar. Aliquam porttitor imperdiet porttitor. Donec vitae luctus lacus, et malesuada elit. Quisque et
-    purus urna. Morbi vitae luctus ex, a vulputate massa. Integer iaculis massa enim, fringilla congue urna interdum sit
-    amet. Cras pellentesque, lacus in cursus lobortis, ipsum tortor tincidunt orci, sit amet gravida arcu neque eu
-    ligula. Nam eu ipsum sed nulla congue dictum vel efficitur justo. Maecenas sit amet ligula in libero tempus eleifend
-    et a sapien. Integer fermentum cursus mollis. Pellentesque dictum ultricies imperdiet. Nulla hendrerit gravida
-    ultricies.</p>
+  <h1>Worksheet 1 </h1>
+  <p>
+    Write a short paragraph (up to 400 words) addressing the following points:
+● What is the software development process?
+● Why is software design important?
+● Give an example of a software that you personally used that you think was designed well and explain why.
+</p>
+  <p>A software development process is a systematic and logical approach to creating a software application that facilitates the requirements of its users. It is an intensively structured process that transforms aproblem specification or requirement into a functional software application. The initial steps of software development consist of analysis and documentation of user requirements and specification of functionality the software should perform. This is followed by a comprehensive design that will act as a blueprint forthe software architecture, performance, and user interface. The next step is implementation which includes writing the code for the program. The code undergoes extensive testing for bugs or errors before deployment. The final step involves maintaining the software to satisfy the needs of users and thrive in a dynamic tech landscape.</p>
+  <p>Software design is a significant component in the software development process since it bridges the gap between user requirements and the actual implementation. An effective design creates a strong foundation for the product, ensuring its great performance and user experience, as well as increasing the software's scalability with respect to adaptability, improvement, and technological advances. Moreover, an effective design enhances traceability, reducing rework costs and decreasing development time for the developer.  Software design optimizes the architecture of the software, thus improving the performance and overall efficiency of the software product.</p>
+  <p>One software design that I believe is well designed is “Kindle”, an Amazon e-reader software. Kindle provides its users with a smooth and friendly experience for reading digital books. It has a  simple and intuitive user interface that makes it easier for users to search through their e-book collections, as well as download and purchase these titles. In addition to the ability to customize their reading space using multiple fonts and styles, Kindle also allows users to highlight passages, thus making it extremely popular among readers. Moreover, it seamlessly syncs one's reading progress and notes between multiple devices allowing one to read anytime and anywhere. There are even more features in the application that further adds to its popularity.</p>
+ 
   <h1>Condimentum Consequat</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in feugiat ipsum. In tincidunt quis erat eget
     suscipit. Mauris et fermentum dolor. Nullam sapien massa, cursus viverra est sed, faucibus venenatis nisl. Duis at
