--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <title>CIS1250_WA1_NayyabGul</title>
+  <meta name="google" content="notranslate">
+</head>
+
+<body>
+  <h1>Worksheet 1 </h1>
+  <p>
+    Write a short paragraph (up to 400 words) addressing the following points:
+● What is the software development process?
+● Why is software design important?
+● Give an example of a software that you personally used that you think was designed well and explain why.
+</p>
+  <p>A software development process is a systematic and logical approach to creating a software application that facilitates the requirements of its users. It is an intensively structured process that transforms aproblem specification or requirement into a functional software application. The initial steps of software development consist of analysis and documentation of user requirements and specification of functionality the software should perform. This is followed by a comprehensive design that will act as a blueprint forthe software architecture, performance, and user interface. The next step is implementation which includes writing the code for the program. The code undergoes extensive testing for bugs or errors before deployment. The final step involves maintaining the software to satisfy the needs of users and thrive in a dynamic tech landscape.</p>
+  <p>Software design is a significant component in the software development process since it bridges the gap between user requirements and the actual implementation. An effective design creates a strong foundation for the product, ensuring its great performance and user experience, as well as increasing the software's scalability with respect to adaptability, improvement, and technological advances. Moreover, an effective design enhances traceability, reducing rework costs and decreasing development time for the developer.  Software design optimizes the architecture of the software, thus improving the performance and overall efficiency of the software product.</p>
+  <p>One software design that I believe is well designed is “Kindle”, an Amazon e-reader software. Kindle provides its users with a smooth and friendly experience for reading digital books. It has a  simple and intuitive user interface that makes it easier for users to search through their e-book collections, as well as download and purchase these titles. In addition to the ability to customize their reading space using multiple fonts and styles, Kindle also allows users to highlight passages, thus making it extremely popular among readers. Moreover, it seamlessly syncs one's reading progress and notes between multiple devices allowing one to read anytime and anywhere. There are even more features in the application that further adds to its popularity.</p>
+  </body>
+<head>
+  <title>CIS1250_WA1_NayyabGul</title>
+  <meta name="google" content="notranslate">
+</head>
+
+</html>
