--- a/index.html
+++ b/index.html
@@ -18,9 +18,23 @@
   <p>Software design is a significant component in the software development process since it bridges the gap between user requirements and the actual implementation. An effective design creates a strong foundation for the product, ensuring its great performance and user experience, as well as increasing the software's scalability with respect to adaptability, improvement, and technological advances. Moreover, an effective design enhances traceability, reducing rework costs and decreasing development time for the developer.  Software design optimizes the architecture of the software, thus improving the performance and overall efficiency of the software product.</p>
   <p>One software design that I believe is well designed is “Kindle”, an Amazon e-reader software. Kindle provides its users with a smooth and friendly experience for reading digital books. It has a  simple and intuitive user interface that makes it easier for users to search through their e-book collections, as well as download and purchase these titles. In addition to the ability to customize their reading space using multiple fonts and styles, Kindle also allows users to highlight passages, thus making it extremely popular among readers. Moreover, it seamlessly syncs one's reading progress and notes between multiple devices allowing one to read anytime and anywhere. There are even more features in the application that further adds to its popularity.</p>
   </body>
+  
 <head>
   <title>CIS1250_WA1_NayyabGul</title>
   <meta name="google" content="notranslate">
+  <body>
+  <h1>Worksheet 2 </h1>
+  <p>
+    Write a short paragraph (up to 200 words) to summarize what is happening in the requirements gathering stage and explain why this stage is important for the entire software development process.
+Assume you were asked to develop the software product you talked about in Writing Assignment 1 (Note: In Writing Assignment 1 you were asked to give an example of a software that you personally used that you think was designed well and explain why). Write 5 user stories for that software. (Recall the user story template: As a <user type>, I want <some action/function>, so that <some reason> )
+</p>
+  <p>The requirement gathering stage is a pivotal process in which the project teams identify and document a  set of operations the software must perform as well as give a clear and concise description of the needs of clients. During this stage, stakeholders i.e. clients users and developers get a detailed understanding of the project's objectives. The requirement document will act as a checklist for the writers thus it should include requirements that are specific, practical and agreed upon by the team.  Effective requirements will help in categorizing and prioritizing features and prevent unplanned additional features to the software, as well as reduce conflicts during the implementation stage. Moreover, by following the right guidelines, the requirements stage ensures that the SDP is functional, reduces the chances of costly changes in the future and helps users engage in the project. Finally, comprehensive requirements serve as the foundation upon which the entire software project is built.</p>
+  <h2> User Stories </h2>
+  <p> As a reader, I want the software to allow me to buy books directly from the app rather than purchasing books from Amazon and then uploading it 
+      As a parent, I want to set up parental control on certain e-books on my kid's profile, so that they can have a safe experience of reading books.
+      As a non-native English person, I want to access a built-in dictionary and thesaurus, so that I can have a better understanding of unfamiliar and new wor
+      As a user with limited space storage, I would like to archive my books so that I can get rid of the books I have read from my device without losing my purchased books
+      As a student, I want the software to allow me to split screen with a multi-task so that I can easily go back and forth between books and have more organized study space.
 </head>
 
 </html>
