--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>CIS1250_WA1_NayyabGul</title>
+  <title>CIS1250_WA_NayyabGul</title>
   <meta name="google" content="notranslate">
 </head>
 
@@ -12,29 +12,115 @@
     Write a short paragraph (up to 400 words) addressing the following points:
 ● What is the software development process?
 ● Why is software design important?
-● Give an example of a software that you personally used that you think was designed well and explain why.
+● Give an example of a software that you personally used that you think was designed well
+    and explain why.
 </p>
-  <p>A software development process is a systematic and logical approach to creating a software application that facilitates the requirements of its users. It is an intensively structured process that transforms aproblem specification or requirement into a functional software application. The initial steps of software development consist of analysis and documentation of user requirements and specification of functionality the software should perform. This is followed by a comprehensive design that will act as a blueprint forthe software architecture, performance, and user interface. The next step is implementation which includes writing the code for the program. The code undergoes extensive testing for bugs or errors before deployment. The final step involves maintaining the software to satisfy the needs of users and thrive in a dynamic tech landscape.</p>
-  <p>Software design is a significant component in the software development process since it bridges the gap between user requirements and the actual implementation. An effective design creates a strong foundation for the product, ensuring its great performance and user experience, as well as increasing the software's scalability with respect to adaptability, improvement, and technological advances. Moreover, an effective design enhances traceability, reducing rework costs and decreasing development time for the developer.  Software design optimizes the architecture of the software, thus improving the performance and overall efficiency of the software product.</p>
-  <p>One software design that I believe is well designed is “Kindle”, an Amazon e-reader software. Kindle provides its users with a smooth and friendly experience for reading digital books. It has a  simple and intuitive user interface that makes it easier for users to search through their e-book collections, as well as download and purchase these titles. In addition to the ability to customize their reading space using multiple fonts and styles, Kindle also allows users to highlight passages, thus making it extremely popular among readers. Moreover, it seamlessly syncs one's reading progress and notes between multiple devices allowing one to read anytime and anywhere. There are even more features in the application that further adds to its popularity.</p>
+  <p>A software development process is a systematic and logical approach to creating a software
+    application that facilitates the requirements of its users. It is an intensively structured
+    process that transforms aproblem specification or requirement into a functional software 
+    application. The initial steps of software development consist of analysis and documentation
+    of user requirements and specification of functionality the software should perform. This is 
+    followed by a comprehensive design that will act as a blueprint forthe software architecture,
+    performance, and user interface. The next step is implementation which includes writing the
+    code for the program. The code undergoes extensive testing for bugs or errors before 
+    deployment. The final step involves maintaining the software to satisfy the needs of users
+    and thrive in a dynamic tech landscape.</p>
+  <p>Software design is a significant component in the software development process since 
+    it bridges the gap between user requirements and the actual implementation. An effective 
+    design creates a strong foundation for the product, ensuring its great performance and user
+    experience, as well as increasing the software's scalability with respect to adaptability,
+    improvement, and technological advances. Moreover, an effective design enhances traceability,
+    reducing rework costs and decreasing development time for the developer.  Software design
+    optimizes the architecture of the software, thus improving the performance and overall
+    efficiency of the software product.</p>
+  <p>One software design that I believe is well designed is “Kindle”, an Amazon e-reader 
+    software. Kindle provides its users with a smooth and friendly experience for reading 
+    digital books. It has a  simple and intuitive user interface that makes it easier for users
+    to search through their e-book collections, as well as download and purchase these titles.
+    In addition to the ability to customize their reading space using multiple fonts and styles,
+    Kindle also allows users to highlight passages, thus making it extremely popular among 
+    readers. Moreover, it seamlessly syncs one's reading progress and notes between multiple 
+    devices allowing one to read anytime and anywhere. There are even more features in the 
+    application that further adds to its popularity.</p>
   </body>
   
 <head>
-  <title>CIS1250_WA1_NayyabGul</title>
+  <title>CIS1250_WA2_NayyabGul</title>
   <meta name="google" content="notranslate">
   <body>
   <h1>Worksheet 2 </h1>
   <p>
-    Write a short paragraph (up to 200 words) to summarize what is happening in the requirements gathering stage and explain why this stage is important for the entire software development process.
-Assume you were asked to develop the software product you talked about in Writing Assignment 1 (Note: In Writing Assignment 1 you were asked to give an example of a software that you personally used that you think was designed well and explain why). Write 5 user stories for that software. (Recall the user story template: As a <user type>, I want <some action/function>, so that <some reason> )
+    Write a short paragraph (up to 200 words) to summarize what is happening in the requirements
+    gathering stage and explain why this stage is important for the entire software development 
+    process.
+Assume you were asked to develop the software product you talked about in Writing Assignment 1
+    (Note: In Writing Assignment 1 you were asked to give an example of a software that you
+    personally used that you think was designed well and explain why). Write 5 user stories for
+    that software. (Recall the user story template: As a <user type>, I want
+      <some action/function>, so that <some reason> )
 </p>
-  <p>The requirement gathering stage is a pivotal process in which the project teams identify and document a  set of operations the software must perform as well as give a clear and concise description of the needs of clients. During this stage, stakeholders i.e. clients users and developers get a detailed understanding of the project's objectives. The requirement document will act as a checklist for the writers thus it should include requirements that are specific, practical and agreed upon by the team.  Effective requirements will help in categorizing and prioritizing features and prevent unplanned additional features to the software, as well as reduce conflicts during the implementation stage. Moreover, by following the right guidelines, the requirements stage ensures that the SDP is functional, reduces the chances of costly changes in the future and helps users engage in the project. Finally, comprehensive requirements serve as the foundation upon which the entire software project is built.</p>
+  <p>The requirement gathering stage is a pivotal process in which the project teams 
+    identify and document a  set of operations the software must perform as well as give 
+    a clear and concise description of the needs of clients. During this stage, stakeholders
+    i.e. clients users and developers get a detailed understanding of the project's objectives.
+    The requirement document will act as a checklist for the writers thus it should include 
+    requirements that are specific, practical and agreed upon by the team.  Effective 
+    requirements will help in categorizing and prioritizing features and prevent unplanned
+    additional features to the software, as well as reduce conflicts during their 
+    implementation stage. Moreover, by following the right guidelines, the requirements 
+    stage ensures that the SDP is functional, reduces the chances of costly changes in the
+    future and helps users engage in the project. Finally, comprehensive requirements serve 
+    as the foundation upon which the entire software project is built.</p>
   <h2> User Stories </h2>
-  <p> As a reader, I want the software to allow me to buy books directly from the app rather than purchasing books from Amazon and then uploading it 
-      As a parent, I want to set up parental control on certain e-books on my kid's profile, so that they can have a safe experience of reading books.
-      As a non-native English person, I want to access a built-in dictionary and thesaurus, so that I can have a better understanding of unfamiliar and new wor
-      As a user with limited space storage, I would like to archive my books so that I can get rid of the books I have read from my device without losing my purchased books
-      As a student, I want the software to allow me to split screen with a multi-task so that I can easily go back and forth between books and have more organized study space.
-</head>
-
+  <p> As a reader, I want the software to allow me to buy books directly from the app rather
+    than purchasing books from Amazon and then uploading it 
+      As a parent, I want to set up parental control on certain e-books on my kid's profile,
+    so that they can have a safe experience of reading books.
+      As a non-native English person, I want to access a built-in dictionary and thesaurus, 
+    so that I can have a better understanding of unfamiliar and new wor
+      As a user with limited space storage, I would like to archive my books,
+    so that I can get rid of the books I have read from my device without losing my purchased books
+      As a student, I want the software to allow me to split screen with a multi-task so that 
+    I can easily go back and forth between books and have more organized study space.
+</body>
+        <head>
+  <title>CIS1250_WA3_NayyabGul</title>
+  <meta name="google" content="notranslate">
+  <body>
+<body>
+  <h1>Worksheet 3 </h1>
+  <p>
+    Write a short paragraph (250-300 words) to address the following. Chapter 3 of the
+Subject to Change textbook describes the use (or lack thereof) of empathy in business
+models. Describe the elements of empathy as presented in the text, list and describe
+the three old-school business models and their problems, and state which one of the
+specific elements of empathy each model lacks and why.
+In summary,
+● Describe the elements of empathy.
+● List the three business models and describe their problems.
+● Relate an element of empathy to each business model, explain why
+the model lacks this element
+</p>
+  <p>Empathy involves understanding the problems, goals, and tasks of other individuals 
+    in a situation without having to experience it yourself. The three elements of Empathy 
+    include emotions, culture and context. The emotional element of empathy involves being
+    sensitive to the feelings, thoughts and experiences of users and understanding their 
+    experiences. Culture and context include understanding how culture influences customers'
+    behaviour and how they use the products in different situations and environments. However,
+    most of the traditional business model lacked elements of empathy, creating a disconnection 
+    with their users. For example, the Sheep Model considered that users were gullible and docile, 
+    and would readily accept popular opinions and marketing messages. This model lacked the
+    emotional element as companies disappointed customers when the products and statements did 
+    not meet the stories that they were told. Then the Homo Economicus  Model viewed human
+    behaviour as solely dependent on self-interest and a result of rational decisions that were
+    meant to maximize utility. This neglects the cultural and contextual element of empaths as
+    it gives an incomplete view of an incomplete picture of customer behaviour and approach to
+    the product. Furthermore, the Tasks and Goal Model, solely focuses on improving the usability 
+    and efficiency of the products while also assuming users are mere robots, only looking for the
+    completion of tasks and goals. This makes the model too low-level to address all aspects of 
+    customer experiences as well as neglects the emotional and cultural influences. The main
+    problem in all the models was that they oversimplify the complexity of the customer's life.
+    The only solution to these problems is to go beyond statistics and extrapolation and 
+    understand the experience of users on a more intimate level.</p>
+  </body>
 </html>
