--- a/CIS1250_WA4_Nayyabgul.html
+++ b/CIS1250_WA4_Nayyabgul.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Persona Profile</title>
+    <title>CIS1250_WA1_NayyabGul</title>
     <link rel="stylesheet" href="styles.css"> <!-- You can link an external CSS file here -->
 </head>
 <body>
