--- a/CIS1250_WA4_Nayyabgul.html
+++ b/CIS1250_WA4_Nayyabgul.html
@@ -11,16 +11,22 @@
     </header>
     <main>
         <section class="persona">
-            <h2>Persona Name: [Name]</h2>
+            <h2>Persona Name: Liliyana  Black </h2>
             <p><strong>Demographics:</strong></p>
             <ul>
-                <li><strong>Age:</strong> [Age]</li>
-                <li><strong>Gender:</strong> [Gender]</li>
-                <li><strong>Location:</strong> [Location]</li>
-                <!-- Add more demographics information as needed -->
+                <li><strong>Age:</strong> 38</li>
+                <li><strong>Occupation:</strong> Waterloo, Ontario</li>
+                <li><strong>Maritatial Status:</strong>Married</li>
+                <li><strong>Children :</strong> Two school-going boys</li>
+                <li><strong>Style:</strong> Expressionism</li>
+                <li><strong>Education:</strong> Bachelor's in Nutrition</li>
             </ul>
             <p><strong>Goals and Motivations:</strong></p>
-            <p>[Goals and motivations description]</p>
+            <p>Responsibility: having kids who were very picky, Ilyana had to get creative with feeding them, to ensure they were receiving all the essential nutrients. This became her first milestone in her love for cooking.
+Self-expressions: Cooking was an outlet for her creativity, she loved creating delicious meals and sharing her new inventions with her friends and family.
+Aspiring recognition: She started posting pictures of her food on Flickr, at first only for her family and friends to see, but soon her food photography skills gained popularity among other food enthusiasts and foodie groups.
+Newer opportunities; her popularity helped her to land some potential partnerships and blogging opportunities.
+</p>
             <p><strong>Challenges and Pain Points:</strong></p>
             <p>[Challenges and pain points description]</p>
             <p><strong>Behavior and Preferences:</strong></p>
