--- a/CIS1250_WA4_Nayyabgul.html
+++ b/CIS1250_WA4_Nayyabgul.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CIS1250_WA1_NayyabGul</title>
-    <link rel="stylesheet" href="styles.css"> <!-- You can link an external CSS file here -->
+    <link rel="stylesheet" href="styles.css"> <!-- https://www.google.com/url?sa=i&url=https%3A%2F%2Fhealth.wyo.gov%2Fmom-two-boys-couch%2F&psig=AOvVaw0QvyJX0M3uvaJhZfVqAQ5z&ust=1697941720109000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCIDr8fqLhoIDFQAAAAAdAAAAABAE -->
 </head>
 <body>
     <header>
@@ -22,11 +22,12 @@
                 <li><strong>Education:</strong> Bachelor's in Nutrition</li>
             </ul>
             <p><strong>Goals and Motivations:</strong></p>
-            <p>Responsibility: having kids who were very picky, Ilyana had to get creative with feeding them, to ensure they were receiving all the essential nutrients. This became her first milestone in her love for cooking.
-Self-expressions: Cooking was an outlet for her creativity, she loved creating delicious meals and sharing her new inventions with her friends and family.
-Aspiring recognition: She started posting pictures of her food on Flickr, at first only for her family and friends to see, but soon her food photography skills gained popularity among other food enthusiasts and foodie groups.
-Newer opportunities; her popularity helped her to land some potential partnerships and blogging opportunities.
-</p>
+            <ul>
+                <li>Responsibility: having kids who were very picky, Ilyana had to get creative with feeding them, to ensure they were receiving all the essential nutrients. This became her first milestone in her love for cooking.</li>
+                <li>Self-expressions: Cooking was an outlet for her creativity, she loved creating delicious meals and sharing her new inventions with her friends and family.</li>
+                <li> Aspiring recognition: She started posting pictures of her food on Flickr, at first only for her family and friends to see, but soon her food photography skills gained popularity among other food enthusiasts and foodie groups.</li>
+                <li> Newer opportunities; her popularity helped her to land some potential partnerships and blogging opportunities.</li>
+                </ul>
             <p><strong>Challenges and Pain Points:</strong></p>
             <p>[Challenges and pain points description]</p>
             <p><strong>Behavior and Preferences:</strong></p>
