--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@ the model lacks this element
 <head>
     <meta charset="UTF-8">
     <title>CIS1250_WA1_NayyabGul</title>
-    <link rel="stylesheet" href="styles.css"> <!-- https://www.google.com/url?sa=i&url=https%3A%2F%2Fhealth.wyo.gov%2Fmom-two-boys-couch%2F&psig=AOvVaw0QvyJX0M3uvaJhZfVqAQ5z&ust=1697941720109000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCIDr8fqLhoIDFQAAAAAdAAAAABAE -->
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fhealth.wyo.gov%2Fmom-two-boys-couch%2F&psig=AOvVaw0QvyJX0M3uvaJhZfVqAQ5z&ust=1697941720109000&source=images&cd=vfe&opi=89978449&ved=0CBMQjhxqFwoTCIDr8fqLhoIDFQAAAAAdAAAAABAE" alt="Image Description">
+
 </head>
 <body>
     <header>
