--- a/index.html
+++ b/index.html
@@ -150,9 +150,17 @@ the model lacks this element
             </ul>
             <p><strong>Goals and Motivations:</strong></p>
             <ul>
-                <li>Responsibility: having kids who were very picky, Ilyana had to get creative with feeding them, to ensure they were receiving all the essential nutrients. This became her first milestone in her love for cooking.</li>
+                <li>Responsibility: having kids who were very picky, Ilyana had to get creative with feeding them, to ensure they were receiving all the essential nutrients.  This resulted in her being even more passionate about cooking.
+</li>
                 <li>Self-expressions: Cooking was an outlet for her creativity, she loved creating delicious meals and sharing her new inventions with her friends and family.</li>
                 <li> Aspiring recognition: She started posting pictures of her food on Flickr, at first only for her family and friends to see, but soon her food photography skills gained popularity among other food enthusiasts and foodie groups.</li>
                 <li> Newer opportunities; her popularity helped her to land some potential partnerships and blogging opportunities.</li>
                 </ul>
-</html>
+            <p><strong>Goals and Motivations:</strong></p>
+          <ul>
+            <li>Hard time managing these new hobbies with her other responsibilities.</li>
+            <li>Difficulty finding inspiration for her unique food photographs and photo editing.</li>
+            <li> Struggles to grow her online presence and audience reach.</li>
+            <li>Looking for opportunities to learn cuisines from around the world and learn more about them.</li>
+        </ul>
+          </html>
