--- a/index.html
+++ b/index.html
@@ -129,16 +129,18 @@ the model lacks this element
 <head>
     <meta charset="UTF-8">
     <title>CIS1250_WA1_NayyabGul</title>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fhealth.wyo.gov%2Fmom-two-boys-couch%2F&psig=AOvVaw0QvyJX0M3uvaJhZfVqAQ5z&ust=1697941720109000&source=images&cd=vfe&opi=89978449&ved=0CBMQjhxqFwoTCIDr8fqLhoIDFQAAAAAdAAAAABAE" alt="Image Description">
+    <h1>Worksheet 4 </h1>
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fhealth.wyo.gov%2Fmom-two-boys-couch%2F&psig=AOvVaw0QvyJX0M3uvaJhZfVqAQ5z&ust=1697941720109000&source=images&cd=vfe&opi=89978449&ved=0CBMQjhxqFwoTCIDr8fqLhoIDFQAAAAAdAAAAABAE" alt="Image"height="14"widht="13>
 
 </head>
 <body>
     <header>
-        <h1>Persona Profile</h1>
+        <h2>Persona Profile</h2>
     </header>
     <main>
         <section class="persona">
             <h2>Persona Name: Liliyana  Black </h2>
+  <p>"Cooking was my responsibilty but photograpy became my passion</p>
             <p><strong>Demographics:</strong></p>
             <ul>
                 <li><strong>Age:</strong> 38</li>
