--- a/index.html
+++ b/index.html
@@ -164,4 +164,45 @@ the model lacks this element
             <li> Struggles to grow her online presence and audience reach.</li>
             <li>Looking for opportunities to learn cuisines from around the world and learn more about them.</li>
         </ul>
+          <head>
+  <title>CIS1250_WA2_NayyabGul</title>
+  <meta name="google" content="notranslate">
+  <body>
+  <h1>Worksheet 2 </h1>
+  <p>
+    Write a short paragraph (up to 300 words) to explain the concept of prototyping in
+software design and its use. Highlight its significance in the development process and
+explain why we prototype. List and describe at least three key benefits of using
+prototypes in software development. Outline and briefly describe the basic steps
+involved in creating and utilizing a paper prototype
+</p>
+  <p>A prototype is a non-functional mock-up that demonstrates and validates concepts of
+    the software development process in less time and cost. It speeds up usability studies 
+    and helps to detect problems at an early stage in the design process as well as ensures
+    the right way to interact with the product. In fact, it plays an important role in ensuring
+    that the user's needs are met. the three benefits of using prototypes in software 
+    development include:
+    <ul>
+      <li>Improved usability; prototyping allows users and clients to interact and be involved
+        with the product. This results in receiving valuable feedback and thus ensures that the
+        real product meets their need and is user-centred. This improves user satisfiability and usability.</li>
+<li>Early issue detection; Prototyping helps to identify and address problems in the design model early 
+  in the software development stage. Thus making the process more cost-efficient and less time-consuming. 
+  Moreover, changes made early in the design process make it of better quality and allow it to meet the 
+  user requirements better.</li>
+<li> Improves communication: Act as a communication tool between developers and non-technical stakeholders
+  and clients. It helps design teams understand user requirements better and as well as allows further user 
+  input, making the product feel more personal to them.</li>
+    </ul>
+</p>
+
+  <p> One of the common types of prototyping is paper prototyping. It gives us quick feedback, rapid iteration 
+    and better communication and improves creativity without any technical skills. In paper prototyping first, 
+    the developers have a meeting to discuss typical but significant users and create their personas. Then they
+    identify typical tasks and select the important tasks for testing. Screenshots and sketches related to the 
+    task are made. Next Usability testing is carried out in the presence of facilitators, human-computer actors,
+    and observers, who introduce, manipulate and receive feedback from the users on the prototype, without getting 
+    involved in the testing process. Multiple usability tests are conducted for refinement and efficiency.</p>
+
+</body>
           </html>
