--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@ the model lacks this element
 
 <head>
     <meta charset="UTF-8">
-    <title>CIS1250_WA1_NayyabGul</title>
-    <h1>Worksheet 4 </h1>
+    <title>CIS1250_WA4_NayyabGul</title>
+    <h1> Worksheet 4 </h1>
 </head>
 <body>
     <header>
@@ -164,8 +164,10 @@ the model lacks this element
             <li> Struggles to grow her online presence and audience reach.</li>
             <li>Looking for opportunities to learn cuisines from around the world and learn more about them.</li>
         </ul>
-          <head>
-  <title>CIS1250_WA2_NayyabGul</title>
+   </body>
+          
+  <head>
+  <title>CIS1250_WA5_NayyabGul</title>
   <meta name="google" content="notranslate">
   <body>
   <h1>Worksheet 5 </h1>
