--- a/index.html
+++ b/index.html
@@ -207,4 +207,32 @@ involved in creating and utilizing a paper prototype
     involved in the testing process. Multiple usability tests are conducted for refinement and efficiency.</p>
 
 </body>
+
+    <head>
+  <title>CIS1250_WA6_NayyabGul</title>
+  <meta name="google" content="notranslate">
+  <body>
+<body>
+  <h1>Worksheet 6 </h1>
+  <p>
+    Write a short paragraph (up to 300 words) on the importance of communication in
+software design. Highlight its significance in the development process and briefly
+describe at least three key elements of effective communication. Share a personal
+experience related to a communication issue you’ve encountered and reflect on how
+you could have handled it better given what you have learned in class.
+</p>
+  <p>Communication plays a significant role in software design, allowing developers to collaborate with stakeholders, 
+    clients and other team members effectively.
+Communication plays a vital in requirement dage to understanding clients' needs and writing a comprehensive requirement 
+    document. Moreover, in the design stage, it allows us to make a collaborative effort to answer the how question, make prototypes run usability studies effectively and write quality design documents.
+The key elements of effective communication include:
+<ul></ul>
+<li>Listening and understanding what are others' perspectives, feedback and requirements. It helps developers create solutions that meet the client's vision.</li>
+<li>Ensuring clarity by being honest, positive and fair, can help convey ideas and requirements and make effective decisions. As well as help in making user-centred designs.</li>
+<li>Showing empathy, understanding and cultural sensitivity towards your users and team members can help build trust and strong relationships between clients and developers.</li>Showing empathy, understanding and cultural sensitivity towards your users and team members can help build trust and strong relationships between clients and developers.
+</ul>
+  Effective communication is vital in maintaining a professional work setting and creating successful outcomes and products.
+  During my sophomore year in high school, we were tasked with completing a group assignment. Due to the COVID-19 lockdown, our collaboration was limited to online means. The lack of communication within the group led to numerous misunderstandings, which significantly slowed down the progress of our project. After reflecting on my communication class, I realize that I could have facilitated more effective discussions by creating interactive Discord groups where everyone could freely express their perspectives, ideas, and concerns. Thus, we could have improved the project's quality and distributed the workload more evenly among the team members, resulting in a faster turnaround.
+</p>
+  </body>
           </html>
